testdata/baselines/reference/submodule/conformance/exportNonInitializedVariablesES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
exportNonInitializedVariablesES6.ts(1,4): error TS1123: Variable declaration list cannot be empty.
exportNonInitializedVariablesES6.ts(2,1): error TS2304: Cannot find name 'let'.
exportNonInitializedVariablesES6.ts(3,6): error TS1123: Variable declaration list cannot be empty.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== exportNonInitializedVariablesES6.ts (3 errors) ====
    var;
       
!!! error TS1123: Variable declaration list cannot be empty.
    let;
    ~~~
!!! error TS2304: Cannot find name 'let'.
    const;
         
!!! error TS1123: Variable declaration list cannot be empty.
    
    export var a;
    export let b;
    export var c: string;
    export let d: number;
    class A {}
    export var e: A;
    export let f: A;
    
    namespace B {
        export let a = 1, b, c = 2;
        export let x, y, z;
    }
    
    module C {
        export var a = 1, b, c = 2;
        export var x, y, z;
    }
    
    // Shouldn't be filtered
    export var a1 = 1;
    export let b1 = 1;
    export var c1: string = 'a';
    export let d1: number = 1;
    class D {}
    export var e1 = new D;
    export let f1 = new D;
    export var g1: D = new D;
    export let h1: D = new D;
    